# rosserial-rs

./: .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml
src/: codec.rs  lib.rs  main.rs
