[package]
name = "rosserial-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tokio-serial = "5"
tokio-stream = "0.1"

num-traits = "0.2"
num-derive = "0.4"

log = "0.4"
env_logger = "0.11"

